# 20GC

./: README.md
EX-connet_four/aseprite/: cursor_point.aseprite  hole.aseprite
EX-connet_four/blender/: piece.blend1
EX-connet_four/godot/: c4solver.gdextension  c4solver.gdextension.uid
EX-connet_four/rust/: Cargo.toml
EX-connet_four/rust/src/: lib.rs  position.rs  solver.rs  transposition.rs
breakout/: .gitignore  Attributions.txt  export_presets.cfg  icon.svg.import  project.godot
breakout/asset/: BoldPixels1.4.ttf.import  default_theme.tres  smooth_bounce.phymat
breakout/scene/: arena.gd  arena.tscn  ball.gd  ball.tscn  boundry.gd  boundry.gd.uid  brick.gd  brick.gd.uid  brick.gdshader  brick.gdshader.uid  brick.tscn  bricks.tscn  paddle.gd  paddle.tscn
breakout/script/: global.gd  global.gd.uid  save.gd  save.gd.uid
connect_four/: Attributions.txt  snippets
connect_four/aseprite/: piece.aseprite  piece_highlight.aseprite  piece_sideway.aseprite
connect_four/blender/: floor.blend  floor.blend1  piece.blend  screen.blend  screen.blend1  screen1.blend
connect_four/godot/: .gitignore  c4solver.gdextension  connect_four.build  export_presets.cfg  project.godot
connect_four/raw_media/: Attributions.txt
conways_game_of_life/: export_presets.cfg  icon.svg.import  project.godot
flappy_bird/: .gitignore  Attributions.txt  export_presets.cfg  icon.svg.import  project.godot
froggy/: TODO.txt
gdscript_templates/: state_persistence_template.gd  worker_thread_template.gd
pong/: Attributions.txt  icon.svg.import  project.godot
pong/scene/: ball.gd  (+9 more)
(+578 files in other folders)
