[package]
name = "c4solver"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
godot = {git = "https://github.com/godot-rust/gdext", branch = "master"}
num-traits = "0.2.19"

[dev-dependencies]
rand = "0.9.2"

[lib]
crate-type = ["cdylib"]
